# azerothcore-wotlk

./: .gitignore  CMakeLists.txt  LICENSE  README.md  docker_build.bat  docker_image.bat  generate_solution.bat  generate_solution_vcpkg.ps1  revision.h.in.cmake  run_docker.bat
cmake/: genrev.cmake  options.cmake  showoptions.cmake
cmake/compiler/gcc/: settings.cmake
cmake/compiler/msvc/: settings.cmake
cmake/macros/: FindMySQL.cmake  FindOpenSSL.cmake
contrib/: CreateAccountProcedure.sql
dep/: CMakeLists.txt
dep/JsonParser/: json.hpp
dep/acelite/ace/: CMakeLists.txt  Event.h
dep/bzip2/: CMakeLists.txt
dep/easy_profiler/: CMakeLists.txt  event_trace_win.cpp
dep/fmt/: CMakeLists.txt
dep/fmt/fmt/: format.h  printf.h
dep/g3dlite/: CMakeLists.txt
dep/g3dlite/source/: debugAssert.cpp
dep/gsoap/: CMakeLists.txt
dep/jemalloc/: CMakeLists.txt
dep/libmpq/: CMakeLists.txt
dep/optick/: CMakeLists.txt
dep/optick/src/: optick.config.h  optick_server.cpp
dep/recastnavigation/: CMakeLists.txt
dep/recastnavigation/Detour/: CMakeLists.txt  DetourNavMeshQuery.cpp
dep/recastnavigation/Recast/: CMakeLists.txt
dep/zlib/: CMakeLists.txt
docker/: build.sh
docker/core/: Dockerfile
extras/: worldserver.conf
extras/configurations/Angrathar/: worldserver.conf
extras/configurations/Feronis/: worldserver.conf
extras/old_sunwell/: worldserver.conf
sql/: opcode_cooldown.sql
sql/structures/: auth_database.sql  characters_database.sql  characters_struct.sql
sql/updates/WorldOctober2019/: 2019_01_12_00_misc.sql  2019_10_12_00_npc_vendor.sql  2019_10_28_00_smart_scripts.sql  2019_10_29_00_gameobject.sql  2019_10_29_01_misc_ashenvale.sql  2019_10_29_02_misc_azshara.sql  2019_10_29_03_misc_azuremyst_bloodmyst.sql  2019_10_29_04_misc_stonetalone_barrens.sql  2019_10_29_05_misc_burning_elwyn_redrige.sql  2019_10_29_06_misc_darkshore_winterspring.sql  2019_10_29_07_misc_desolace.sql  2019_10_29_08_misc_dunmorogh_badlands_searing.sql  2019_10_29_09_misc_durotar_barrens.sql  2019_10_29_10_misc_dustwallow.sql  2019_10_29_11_misc_eversong_tirisfdal_ghostlands.sql  2019_10_29_12_misc_felwood.sql  2019_10_29_13_misc_feralas.sql  2019_10_29_14_misc_hillsbrad_alterac.sql  2019_10_29_15_misc_hinterlands.sql  2019_10_29_16_misc_mulgore.sql  2019_10_29_17_misc_deadmines.sql  2019_10_29_18_misc_silithus_silverpine.sql  2019_10_29_19_misc_stonetalon.sql  2019_10_29_20_misc_stv_duskwood_westfall.sql  2019_10_29_21_misc_tanaris.sql  2019_10_29_22_misc_thousand_needles.sql  2019_10_29_23_misc_wetlands_loch_modan.sql  2019_10_30_00_gameobject.sql  2019_11_04_00_smartscripts.sql  2019_11_06_00_misc.sql  2019_11_09_00_creature.sql  2019_11_12_00_misc_skinning.sql  2019_11_13_00_trinity_strings.sql  2019_11_14_00_loot_grey.sql  2019_11_15_00_misc_npc.sql  2019_11_16_00_creature_misc.sql  2019_11_16_01_gameobject_req_level.sql  2019_11_16_02_npc_ironhill.sql  2019_11_16_03_npc_misc.sql  2019_11_17_00_event_scripts.sql  (+115 more)
sql/updates/auth/: 2016_12_24_01_auth_autobroadcast.sql  2017_08_22_01_auth_account_history.sql  2017_08_25_auth_ingame_stats.sql  2017_09_22_01_auth_autobroadcast.sql  2017_09_22_ip2nation.sql  2018_01_24_00_account_premium_realmid.sql  2018_01_24_01_account_mute_history.sql  2018_01_31_00_realmid.sql  2018_04_20_00_vpn_list.sql  2019_01_31_00_account_premium_unification.sql  2020_04_04_00_account_is_recruiter_flag.sql
sql/updates/characters/: 2017_03_09_01_characters_group_saved_loot.sql  2017_03_15_01_characters_group_saved_loot.sql  2017_03_31_01_characters_bazar_auction.sql  2017_04_11_01_characters_blizzlike.sql  2017_04_13_01_characters_pet_aura.sql  2017_05_04_01_characters_arenaAnnounce.sql  2017_05_04_01_characters_ninja_looter.sql  2017_08_12_01_characters_lottery.sql  2017_08_25_01_characters_gambling_stats.sql  2017_09_23_01_characters_item_instance.sql  2017_09_25_01_characters_autoInvite.sql  2017_10_06_01_characters_extra_flag.sql  2017_10_20_01_bazaar_types_cleanup.sql  2017_10_20_01_characters_types_cleanup.sql  2017_11_04_01_characters_armory_stats.sql  2017_11_04_02_characters_kiszak.sql  2017_11_07_01_characters_not_used_tables.sql  2018_01_06_00_characters_boss_records.sql  2018_01_08_00_characters_reserved_name.sql  2018_01_15_00_characters_bazar_auction.sql  2018_02_02_00_character_stats.sql  2018_02_02_characters_avgitemlevel.sql  2018_03_02_00_character_stats.sql  2018_03_29_00_character_channel_block.sql  2018_04_02_00_character_stats.sql  2018_04_20_00_item_restore.sql  2018_04_20_01_latency_record..sql  2018_06_25_log_loot.sql  2018_06_26_00_characters_ninja.sql  2018_07_04_00_characters_ninja.sql  2019_03_16_log_money.sql  2019_05_22_00_mail_external.sql  2019_05_27_00_petition.sql  2019_06_20_00_pvp_stats.sql  2019_07_12_log_trade.sql  2019_10_04_00_web_commands.sql  2019_10_08_00_stance_restore.sql  2019_10_25_00_xprate.sql  2019_10_29_2019_00_gm_surveys.sql  2019_11_14_00_reserved_names.sql  (+5 more)
sql/updates/characters_custom/: 2020_02_12_00_client_action.sql
sql/updates/transmog/: transmog_characters.sql  transmog_world.sql
sql/updates/world/: 2017_03_29_world_ulduar.sql  2017_04_05_spell_script_names.sql  2017_04_11_spell_script_names.sql  2017_04_12_world_ulduar.sql  2017_05_26_erekem_violet_hold.sql  2017_05_26_smart_scripts.sql  2017_05_26_spell_script_names.sql  2017_05_26_world_battle_for_undercity_02_reborn_from_ashes.sql  2017_05_26_world_battle_for_undercity_03_fate_up_against_your_will.sql  2017_05_26_world_battle_for_undercity_11.sql  (+1473 more)
(+1626 files in other folders)
